Add bar chart and Top Event demo

--- a/app/index.jade
+++ b/app/index.jade
@@ -7,5 +7,6 @@ html(class="no-js", lang="en")
           h1 SPARQLverse D3 demos:
           ul
             li <a href="socialnetwork.html">Social Network</a>
+            li <a href="topevent.html">Top Event</a>
             li <a href="d3demo.html">Basic D3 demo (no SPARQL)</a>
       include footer
