--- a/app/kevinbaconruntime.jade
+++ b/app/kevinbaconruntime.jade
@@ -9,11 +9,13 @@ doctype html
 html(class="no-js", lang="en")
     include header
     script
-      | var xaxis_var = "date",
-      | yaxis_var = "movieName",
-      | radius_var = "runTime",
-      | xaxis_label = "X",
-      | yaxis_label = "Y";
+      | var xaxis_var = "runTime",
+      | yaxis_var = "date",
+      | radius_var = "numActors",
+      | xaxis_label = "Run Time",
+      | yaxis_label = "Date",
+      | min_r = 3,
+      | max_r = 40;
     // build:js js/scatterplot.js
     script(src="js/scatterplot.js")
     // endbuild
@@ -31,15 +33,24 @@ html(class="no-js", lang="en")
                 br
                 button.button(type="button" onclick="exec()") RUN
             textarea#sparql(style="min-height:200px")
-              | SELECT ?movieName ?runTime ?date FROM <movie> WHERE {
+              | SELECT ?movieName ?runTime ?date ?filmid ?directorid
+              | (count(*) as ?numActors)
+              | FROM <movie> WHERE {
               | ?kb    <http://data.linkedmdb.org/resource/movie/actor_name> "Kevin Bacon".
               | ?movie <http://data.linkedmdb.org/resource/movie/actor> ?kb.
+              | ?movie <http://data.linkedmdb.org/resource/movie/actor> ?actor.
               | ?movie <http://www.w3.org/2000/01/rdf-schema#label> ?movieName.
+              | ?movie <http://data.linkedmdb.org/resource/movie/filmid> ?filmid.
               | ?movie <http://data.linkedmdb.org/resource/movie/runtime> ?runTime.
               | ?movie <http://purl.org/dc/terms/date> ?date.
+              | ?movie <http://data.linkedmdb.org/resource/movie/director> ?director.
+              | ?director <http://data.linkedmdb.org/resource/movie/director_directorid> ?directorid.
+              | #filter ( ?date > "2000" )
               | }
-
+              | GROUP BY ?movieName ?runTime ?date ?filmid ?kb ?movie ?directorid
+              | ORDER BY ?numActors
+              | LIMIT 100
 
           h2 Description
-          p The runtime of movies that Kevin Bacon has acted in
+          p The number of actors in movies that Kevin Bacon has acted in over filming date and runtime
       include footer
