--- a/app/d3demo.jade
+++ b/app/d3demo.jade
@@ -1,14 +1,13 @@
-doctype html
-html(class="no-js", lang="en")
-    include header
-    // build:js js/socialnetwork.js
-    script(src="js/d3demo.js")
-    // endbuild
-    body
-      div.row
-        div(class="small-12 small-centered medium-10 medium-centered large-8 large-centered columns panel radius")
-          h1 D3 Demo
-          h2 Description
-          p Just a basic demo to make sure D3 and the build system works
+extends ./layout.jade
 
-      include footer
+block title
+  title Kevin Bacon Runtime
+block scripts
+  // build:js js/socialnetwork.js
+  script(src="js/d3demo.js")
+  // endbuild
+  
+block content
+  h1 D3 Demo
+  h2 Description
+  p Just a basic demo to make sure D3 and the build system works
