--- a/app/kevinbaconruntime.jade
+++ b/app/kevinbaconruntime.jade
@@ -5,52 +5,52 @@
   unzip ~/data/movie/linkedmdb-latest-dump.zip
   Load the movie dataset
   LOAD <file:/home/scl/data/movie/linkedmdb-latest-dump.nt> INTO GRAPH <movie>
-doctype html
-html(class="no-js", lang="en")
-    include header
-    script
-      | var xaxis_var = "runTime",
-      | yaxis_var = "date",
-      | radius_var = "numActors",
-      | xaxis_label = "Run Time",
-      | yaxis_label = "Date",
-      | min_r = 3,
-      | max_r = 40;
-    // build:js js/scatterplot.js
-    script(src="js/scatterplot.js")
-    // endbuild
-    body
-      div.row
-        div(class="small-12 small-centered medium-10 medium-centered large-8 large-centered columns panel radius")
-          h1 Scatter
-          #query
-            form.form-inline
-              label SPARQL endpoint:
-              .input-append
-                input#endpoint(value="//endpoint//" type="text")
-                input#showquerytitle(type="checkbox" onclick="toggle()")
-                label(for="showquerytitle") Hide Query
-                br
-                button.button(type="button" onclick="exec()") RUN
-            textarea#sparql(style="min-height:200px")
-              | SELECT ?movieName ?runTime ?date ?filmid ?directorid
-              | (count(*) as ?numActors)
-              | FROM <movie> WHERE {
-              | ?kb    <http://data.linkedmdb.org/resource/movie/actor_name> "Kevin Bacon".
-              | ?movie <http://data.linkedmdb.org/resource/movie/actor> ?kb.
-              | ?movie <http://data.linkedmdb.org/resource/movie/actor> ?actor.
-              | ?movie <http://www.w3.org/2000/01/rdf-schema#label> ?movieName.
-              | ?movie <http://data.linkedmdb.org/resource/movie/filmid> ?filmid.
-              | ?movie <http://data.linkedmdb.org/resource/movie/runtime> ?runTime.
-              | ?movie <http://purl.org/dc/terms/date> ?date.
-              | ?movie <http://data.linkedmdb.org/resource/movie/director> ?director.
-              | ?director <http://data.linkedmdb.org/resource/movie/director_directorid> ?directorid.
-              | #filter ( ?date > "2000" )
-              | }
-              | GROUP BY ?movieName ?runTime ?date ?filmid ?kb ?movie ?directorid
-              | ORDER BY ?numActors
-              | LIMIT 100
 
-          h2 Description
-          p The number of actors in movies that Kevin Bacon has acted in over filming date and runtime
-      include footer
+extends ./layout.jade
+
+block title
+  title Kevin Bacon Runtime
+block scripts
+  script
+    | var xaxis_var = "runTime",
+    | yaxis_var = "date",
+    | radius_var = "numActors",
+    | xaxis_label = "Run Time",
+    | yaxis_label = "Date",
+    | min_r = 3,
+    | max_r = 40;
+  // build:js js/scatterplot.js
+  script(src="js/scatterplot.js")
+  // endbuild
+block content
+  h1 Scatter
+  #query
+    form.form-inline
+      label SPARQL endpoint:
+      .input-append
+        input#endpoint(value="//endpoint//" type="text")
+        input#showquerytitle(type="checkbox" onclick="toggle()")
+        label(for="showquerytitle") Hide Query
+        br
+        button.button(type="button" onclick="exec()") RUN
+    textarea#sparql(style="min-height:200px")
+      | SELECT ?movieName ?runTime ?date ?filmid ?directorid
+      | (count(*) as ?numActors)
+      | FROM <movie> WHERE {
+      | ?kb    <http://data.linkedmdb.org/resource/movie/actor_name> "Kevin Bacon".
+      | ?movie <http://data.linkedmdb.org/resource/movie/actor> ?kb.
+      | ?movie <http://data.linkedmdb.org/resource/movie/actor> ?actor.
+      | ?movie <http://www.w3.org/2000/01/rdf-schema#label> ?movieName.
+      | ?movie <http://data.linkedmdb.org/resource/movie/filmid> ?filmid.
+      | ?movie <http://data.linkedmdb.org/resource/movie/runtime> ?runTime.
+      | ?movie <http://purl.org/dc/terms/date> ?date.
+      | ?movie <http://data.linkedmdb.org/resource/movie/director> ?director.
+      | ?director <http://data.linkedmdb.org/resource/movie/director_directorid> ?directorid.
+      | #filter ( ?date > "2000" )
+      | }
+      | GROUP BY ?movieName ?runTime ?date ?filmid ?kb ?movie ?directorid
+      | ORDER BY ?numActors
+      | LIMIT 100
+
+  h2 Description
+  p The number of actors in movies that Kevin Bacon has acted in over filming date and runtime
