Add Kevin Bacon Runtime demo
Fix query to show date as year only

--- a/app/index.jade
+++ b/app/index.jade
@@ -3,6 +3,7 @@ extends ./layout.jade
 block content
   h1 SPARQLverse D3 demos:
   ul
-    li <a href="socialnetwork.html">Social Network</a>
+    li <a href="kevinbaconruntime.html">Kevin Bacon Runtime</a>
     li <a href="topevent.html">Top Event</a>
+    li <a href="socialnetwork.html">Social Network</a>
       
