Make site presentable
Add navigation bar
Add links to footer
Add copy and images to front page

--- a/app/footer.jade
+++ b/app/footer.jade
@@ -1,7 +1,13 @@
 .row
   h2(class="text-right")
-    a(href="https://gitlab.com/sparqlcity/d3demo")
+    a(href="http://twitter.com/sparqlcity")
+      i(class="fa fa-twitter")
+    span &nbsp;
+    a(href="https://github.com/sparqlcity/d3-demo")
       i(class="fa fa-github")
+    span &nbsp;
+    a(href="http://sparqlcity.com")
+      i(class="fa fa-home")
 
 // build:js js/vendor/libraries.min.js
 // bower:js
