--- a/app/socialnetwork.jade
+++ b/app/socialnetwork.jade
@@ -1,7 +1,8 @@
 extends ./layout.jade
 
 block title
-  title Kevin Bacon Runtime
+  title Social Network
+  
 block scripts
   script
     | var key1 = "",
