--- a/app/index.jade
+++ b/app/index.jade
@@ -1,9 +1,10 @@
 extends ./layout.jade
 
+block banner
+  .row.banner &nbsp;
+
 block content
-  h1 SPARQLverse D3 demos:
-  ul
-    li <a href="kevinbaconruntime.html">Kevin Bacon Runtime</a>
-    li <a href="topevent.html">Top Event</a>
-    li <a href="socialnetwork.html">Social Network</a>
-      
+  h1 SPARQLverse D3 demos
+  p This project explores using <a href="http://d3js.org">D3 JS</a> to visualize SPARQL queries run by <a href="http://SPARQLCity.com">SPARQLverse</a> from many different sets of data.
+  p It utilizes the <a href="http://biohackathon.org/d3sparql/">D3SPARQL</a> library to pass queries to the SPARQL endpoint and analyze the results for D3.
+  p Fork <a href="https://github.com/sparqlcity/d3-demo">this repo on GitHub</a>
