--- a/app/layout.jade
+++ b/app/layout.jade
@@ -9,7 +9,8 @@ html(class="no-js", lang="en")
     block banner
     include nav
     div.row#maincontent
-      div(class="small-12 small-centered medium-10 medium-centered large-8 large-centered columns panel radius")
+      div(class="small-10 small-centered columns panel radius")
         block content
-
+    div.row#graph
+      div(class="small-12 columns")
     include footer
