Add labels to scatter plot
Add 'scatterplotwithnodelabel' visualizer function

--- a/app/scss/_appstyles.scss
+++ b/app/scss/_appstyles.scss
@@ -11,3 +11,17 @@
 #maincontent {
   margin-top: 40px;
 }
+
+// NODES & LABELS
+// Adds a label to nodes on hover
+.nodelabel {
+  display: none;
+}
+.nodeset:hover {
+  .node {
+    opacity: 1;
+  }
+  .nodelabel {
+    display: block;
+  }
+}
