--- a/app/kevinbaconruntime.jade
+++ b/app/kevinbaconruntime.jade
@@ -17,6 +17,7 @@ block scripts
     | radius_var = "numActors",
     | xaxis_label = "Run Time",
     | yaxis_label = "Date",
+    | node_label = "movieName",
     | min_r = 3,
     | max_r = 40;
   // build:js js/scatterplot.js
@@ -49,7 +50,6 @@ block content
       | #filter ( ?date > "2000" )
       | }
       | GROUP BY ?movieName ?runTime ?date ?filmid ?kb ?movie ?directorid
-      | ORDER BY ?numActors
       | LIMIT 100
 
   h2 Description
