Add 'build a query' demo

--- a/app/nav.jade
+++ b/app/nav.jade
@@ -19,5 +19,6 @@
           ul.dropdown
             li
               a(href="/kevinbaconruntime.html") Kevin Bacon Runtime
+              a(href="/buildruntime.html") Build A Runtime
               a(href="/socialnetwork.html") Social Network
               a(href="/topevent.html") Top Event
