--- a/app/footer.jade
+++ b/app/footer.jade
@@ -39,3 +39,5 @@ script(src="bower_components/foundation/js/foundation/foundation.topbar.js")
 // build:js js/app.min.js
 script(src="js/app.js")
 // endbuild
+
+block scripts_footer
