--- a/app/kevinbaconruntime.jade
+++ b/app/kevinbaconruntime.jade
@@ -35,22 +35,7 @@ block content
         br
         button.button(type="button" onclick="exec()") RUN
     textarea#sparql(style="min-height:200px")
-      | SELECT ?movieName ?runTime (SUBSTR(?date, 1, 4) AS ?date) ?filmid ?directorid
-      | (count(*) as ?numActors)
-      | FROM <movie> WHERE {
-      | ?kb    <http://data.linkedmdb.org/resource/movie/actor_name> "Kevin Bacon".
-      | ?movie <http://data.linkedmdb.org/resource/movie/actor> ?kb.
-      | ?movie <http://data.linkedmdb.org/resource/movie/actor> ?actor.
-      | ?movie <http://www.w3.org/2000/01/rdf-schema#label> ?movieName.
-      | ?movie <http://data.linkedmdb.org/resource/movie/filmid> ?filmid.
-      | ?movie <http://data.linkedmdb.org/resource/movie/runtime> ?runTime.
-      | ?movie <http://purl.org/dc/terms/date> ?date.
-      | ?movie <http://data.linkedmdb.org/resource/movie/director> ?director.
-      | ?director <http://data.linkedmdb.org/resource/movie/director_directorid> ?directorid.
-      | #filter ( ?date > "2000" )
-      | }
-      | GROUP BY ?movieName ?runTime ?date ?filmid ?kb ?movie ?directorid
-      | LIMIT 100
+      include ./queries/kevinbaconruntime.txt
 
   h2 Description
   p The number of actors in movies that Kevin Bacon has acted in over the years and by runtime
