Fix grunt automation
Add better view / include structure
Add queries as text files

--- a/app/views/buildruntime.jade
+++ b/app/views/buildruntime.jade
@@ -1,12 +1,4 @@
-//-
-  Instructions:
-  Upload the datafile (linkedmdb-latest-dump.zip) to the server in the ~/data/movie directory
-  Unzip the dataset
-  unzip ~/data/movie/linkedmdb-latest-dump.zip
-  Load the movie dataset
-  LOAD <file:/home/scl/data/movie/linkedmdb-latest-dump.nt> INTO GRAPH <movie>
-
-extends ./layout.jade
+extends ../includes/layout.jade
 
 block title
   title Build A Runtime
