add data and README to packaged release

--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -7,4 +7,4 @@ block content
   h1 SPARQLverse D3 demos
   p This project explores using <a href="http://d3js.org">D3 JS</a> to visualize SPARQL queries run by <a href="http://SPARQLCity.com">SPARQLverse</a> from many different sets of data.
   p It utilizes the <a href="http://biohackathon.org/d3sparql/">D3SPARQL</a> library to pass queries to the SPARQL endpoint and analyze the results for D3.
-  p Fork <a href="https://github.com/sparqlcity/d3-demo">this repo on GitHub</a>
+  p Refer to this project's <a href="https://github.com/sparqlcity/d3-demo">GitHub repo</a> to fork it, extend it, or download the latest releas to run on your own SPARQLverse installation.
