add date filter capability to generated scatterplot
Adds filters.js
Adds graphmods block to provide filter UI only to those specific graphs which need filters
Adds .hidden class

--- a/app/includes/layout.jade
+++ b/app/includes/layout.jade
@@ -13,4 +13,9 @@ html(class="no-js", lang="en")
         block content
     div.row#graph
       div(class="small-12 columns")
+    .row.hidden#filters
+      .small-10.small-centered.columns.panel.radius
+        h2 Filters
+        block graphmods
+          //- Modifications to the graph, such as a date filter
     include footer
