--- a/app/views/kevinbaconruntime.jade
+++ b/app/views/kevinbaconruntime.jade
@@ -31,15 +31,16 @@ block content
 
   h2 Description
   p The number of actors in movies that Kevin Bacon has acted in over the years and by runtime
-  p Uncomment the 'filter' line to see the same data from 2000 to now.
+  p Once the graph is generated you will have access to a new interface that will let you drill into the data in real time
 
 block graphmods
-  p Date Filter: Remove films made before a specific date
+  p Date Filter: Remove films made before a specific date:
   .row
-    .small-9.columns
-      input#datefilter(type="text" value="1990")
-    .small-3.columns
-      button.button.small(type="button" onclick="FilterDate.scatterplot()") Filter Date
+    .small-12.columns
+      p Films made after: 
+        input#datefilter(type="range" value="1990" oninput="FilterDate.updateDateFilterText(this.value)" onchange="FilterDate.scatterplotMin()")
+        | &nbsp; &nbsp;
+        span#datefilterval 1990
 
 block scripts_footer
   script(src="js/filters.js")
