--- a/app/includes/header.jade
+++ b/app/includes/header.jade
@@ -4,9 +4,7 @@ link(rel="icon" href="images/favico.ico" type="image/x-icon")
 //- <!-- build:css .tmp/css/libraries.min.css -->
 link(rel="stylesheet", href="../bower_components/font-awesome/css/font-awesome.css")
 //- <!-- endbuild -->
-//- <!-- build:css .tmp/css/app.min.css -->
-link(rel="stylesheet", href="../css/app.css")
-//- <!-- endbuild -->
+link(rel="stylesheet", href="css/app.css")
 //- <!-- build:js .tmp/js/vendor/modernizr.min.js -->
 script(src="../bower_components/modernizr/modernizr.js")
 //- <!-- endbuild -->
