add render*.js for different rendering options of new visualizations

--- a/app/views/buildruntime.jade
+++ b/app/views/buildruntime.jade
@@ -14,8 +14,9 @@ block scripts
     | max_r = 40,
     | dropdown_target = "#actor-dropdown",
     | option_value = "actorName";
-  script(src="js/scatterplotnodelabel.js")
   script(src="js/dropdown.js")
+  script(src="js/scatterplotnodelabel.js")
+  script(src="js/renderscatterplotnodelabel.js")
   script(src="js/builddemo.js")
 block content
   h1 Build a Runtime
