--- a/app/views/kevinbaconruntime.jade
+++ b/app/views/kevinbaconruntime.jade
@@ -12,9 +12,9 @@ block scripts
     | node_label = "movieName",
     | min_r = 3,
     | max_r = 40;
-  // build:js js/scatterplot.js
-  script(src="js/scatterplot.js")
-  // endbuild
+  script(src="js/scatterplotnodelabel.js")
+  script(src="js/renderkevinbaconruntime.js")
+
 block content
   h1 Kevin Bacon Runtime
   #query
