add svxd3sparql.js lib

--- a/app/includes/header.jade
+++ b/app/includes/header.jade
@@ -11,4 +11,5 @@ script(src="../bower_components/modernizr/modernizr.js")
 //- <!-- build:js .tmp/js/vendor/d3.min.js -->
 script(src='../bower_components/d3/d3.js')
 script(src='../js/d3sparql.js')
+script(src='../js/svxd3sparql.js')
 //- <!-- endbuild -->
